Добавлен endpoint для просмотра публичных постов
