# API.yaml
@@ -183,6 +183,24 @@ paths:
                   $ref: '#/components/schemas/Post'
         '500':
           description: Server error
+  /api/posts/public:
+    get:
+      tags:
+        - post
+      summary: List public posts
+      description: ''
+      operationId: getAllPublicPosts
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Post'
+        '500':
+          description: Server error
   /api/posts/{id}:
     parameters:
     - name: id
